--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,22 @@ repositories {
 dependencies {
     // Spring Shell
     implementation("org.springframework.shell:spring-shell-starter:2.0.0.RELEASE")
-    
+
     // Apache Camel
     implementation platform("org.apache.camel:camel-spring-boot-dependencies:$camelVersion")
     implementation("org.apache.camel:camel-kafka")
     implementation("org.apache.camel:camel-test")
+
+    implementation("org.apache.commons:commons-math3:3.6.1")
+    implementation("org.apache.commons:commons-io:1.3.2")
+
+    // Test
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.4.2")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.4.2")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.4.2")
+    testImplementation("junit:junit:4.12")
+    testRuntime("org.junit.vintage:junit-vintage-engine:5.4.2")
+    testImplementation("org.assertj:assertj-core:3.11.0")
 }
 
 test {
