--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 
     implementation("org.apache.commons:commons-math3:3.6.1")
     implementation("org.apache.commons:commons-io:1.3.2")
+    implementation("org.apache.commons:commons-lang3:3.9")
 
     // Test
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.4.2")
